test/corpus/program.txt
==================
Minimal program EN
==================
@start
@end
---

(source_file
  (program_start)
  (program_end))

==================
Minimal program RU
==================
@начало
@конец
---

(source_file
  (program_start)
  (program_end))

==================
Program with whitespace
==================
@start


@end
---

(source_file
  (program_start)
  (program_end))
